# Dr.Computer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_open_notes.py
scripts/: clean.sh  dev.sh
src/dr_computer/: __init__.py
src/dr_computer/cli/: main.py
src/dr_computer/core/: actions.py  grounding.py  intent.py  loop.py  messages.py  observation.py  protocols.py  safety.py  trajectory.py
src/dr_computer/execution/: pyautogui_exec.py
src/dr_computer/memory/: in_memory.py
src/dr_computer/perception/: macos.py
src/dr_computer/providers/: base.py  qwen_vl.py
src/dr_computer/utils/: bbox.py  events.py  image.py
tests/unit/: test_actions.py  test_loop.py  test_qwen_vl.py  test_safety.py
